refactor: use QUERY_CLIENT and DATE_FNS_LOCALE tokens

--- a/src/app/pages/about/licenses/licenses.html
+++ b/src/app/pages/about/licenses/licenses.html
@@ -1,5 +1,5 @@
 <div class="mat-typography p-4">
   <h1>Third Party Licenses</h1>
 
-  <pre class="font-mono p-0 m-0">{{ (licensesQry | useQry)?.data }}</pre>
+  <pre class="font-mono p-0 m-0">{{ licensesQry().data }}</pre>
 </div>
