--- a/src/app/pages/streams-detail/stream-summary/stream-summary.html
+++ b/src/app/pages/streams-detail/stream-summary/stream-summary.html
@@ -5,10 +5,10 @@
         class="img rounded absolute w-full h-full object-center object-cover"
         loading="lazy"
         fill
-        [ngSrc]="stream.thumbnailUrl + '?ngsw-bypass'"
+        [src]="stream()?.thumbnailUrl + '?ngsw-bypass'"
       />
 
-      <ng-container [ngSwitch]="stream.platform">
+      <ng-container [ngSwitch]="stream()?.platform">
         <div
           *ngSwitchCase="'YOUTUBE'"
           class="bg-[#d74432] absolute top-1 left-1 text-white m-0 max-h-[1.2rem] rounded font-medium text-xs/3 py-[3px] px-1"
@@ -32,41 +32,41 @@
       [attr.href]="link"
       target="_blank"
     >
-      {{ stream.title }}
+      {{ stream()?.title }}
     </a>
 
     <a
       class="text-inherit no-underline inline-block mb-2 mat-body"
-      [routerLink]="['/vtuber', stream.vtuberId]"
+      [routerLink]="['/vtuber', stream()?.vtuberId]"
     >
       <img
         class="rounded-full align-middle"
         height="24"
         width="24"
-        [ngSrc]="stream.vtuberId | avatar"
+        [src]="stream()?.vtuberId | avatar"
       />
-      <span class="ml-2 align-middle">{{ stream.vtuberId | name }}</span>
+      <span class="ml-2 align-middle">{{ stream()?.vtuberId | name }}</span>
     </a>
 
     <div class="mb-2">
       <span class="mat-small">Start time:</span>
       <span class="mat-body-1">
-        {{ stream.startTime | date: 'yyyy/MM/dd HH:mm:ss' }}
+        {{ stream()?.startTime | date: 'yyyy/MM/dd HH:mm:ss' }}
       </span>
     </div>
 
-    <div class="mb-2" *ngIf="stream.status === 'ENDED'">
+    <div class="mb-2" *ngIf="stream()?.status === 'ENDED'">
       <span class="mat-small">End time:</span>
       <span class="mat-body-1">
-        {{ stream.endTime | date: 'yyyy/MM/dd HH:mm:ss' }}
+        {{ stream()?.endTime | date: 'yyyy/MM/dd HH:mm:ss' }}
       </span>
     </div>
 
     <div>
       <span class="mat-small">Duration: </span>
       <span class="mat-body-1">
-        {{ stream.status === 'ENDED' ? (stream.startTime | duration:
-        stream.endTime) : (stream.startTime | duration: (everySecond$ |
+        {{ stream()?.status === 'ENDED' ? (stream()?.startTime | duration:
+        stream()?.endTime) : (stream()?.startTime | duration: (everySecond$ |
         async))}}
       </span>
     </div>
@@ -79,12 +79,12 @@
   <div>
     <div class="mat-small mat-secondary-text">Avg./max viewers</div>
     <div class="mat-headline-5 m-0">
-      {{ stream?.viewerAvg ? (stream?.viewerAvg | number) : '---' }}
+      {{ stream()?.viewerAvg ? (stream()?.viewerAvg | number) : '---' }}
       <span class="mat-body">/</span>
-      {{ stream?.viewerMax ? (stream?.viewerMax | number) : '---' }}
+      {{ stream()?.viewerMax ? (stream()?.viewerMax | number) : '---' }}
     </div>
   </div>
-  <div *ngIf="stream?.platform === 'YOUTUBE'">
+  <div *ngIf="stream()?.platform === 'YOUTUBE'">
     <div class="mat-small mat-secondary-text">
       <span class="align-middle"> Likes / dislikes </span>
       <mat-icon
@@ -94,16 +94,16 @@
         matTooltipPosition="above"
       />
     </div>
-    <div class="mat-headline-5 m-0" *ngIf="ratesQry | useQry as result">
-      {{ result?.data?.likes | number }}
+    <div class="mat-headline-5 m-0" *ngIf="ratesQry()?.data as data">
+      {{ data.likes | number }}
       <span class="mat-body">/</span>
-      {{ result?.data?.dislikes | number }}
+      {{ data.dislikes | number }}
     </div>
   </div>
   <div>
     <div class="mat-small mat-secondary-text" i18n="@@live-chat">Live chat</div>
-    <div class="mat-headline-5 m-0" *ngIf="chatCountQry | useQry as result">
-      {{ result?.data ? (result.data | number) : '---' }}
+    <div class="mat-headline-5 m-0" *ngIf="chatCountQry() as result">
+      {{ result.data ? (result.data | number) : '---' }}
     </div>
   </div>
   <div>
@@ -113,15 +113,15 @@
         class="!h-[12px] !w-[12px] leading-[12px] align-middle"
         svgIcon="information_outline"
         [matTooltip]="
-          'Only includes ' + (stream?.platform == 'YOUTUBE'
+          'Only includes ' + (stream()?.platform == 'YOUTUBE'
             ? 'YouTube Super Chat & Super Sticker'
             : 'Twitch Cheering & Hyper Chat')
         "
         matTooltipPosition="above"
       />
     </div>
-    <div class="mat-headline-5 m-0" *ngIf="revenueQry | useQry as result">
-      {{ (result?.data) ? (result.data | useCurrency) : '---' }}
+    <div class="mat-headline-5 m-0" *ngIf="revenueQry() as result">
+      {{ result.data ? (result.data | useCurrency) : '---' }}
     </div>
   </div>
 </div>
