--- a/src/app/pages/vtubers-detail/stream-time/stream-time.html
+++ b/src/app/pages/vtubers-detail/stream-time/stream-time.html
@@ -1,6 +1,6 @@
 <div
   class="mat-border-divider rounded border border-solid p-4 mb-4"
-  *ngIf="streamTimesQry | useQry as result"
+  *ngIf="result() as result"
 >
   <div class="flex flex-row items-center mb-4">
     <div class="flex-1">
