--- a/src/app/pages/streams-detail/stream-viewer-stats/stream-viewer-stats.html
+++ b/src/app/pages/streams-detail/stream-viewer-stats/stream-viewer-stats.html
@@ -3,20 +3,24 @@
     <div class="mat-h3 m-0" i18n="@@stream-viewers">Stream viewers</div>
   </div>
 
-  <ng-container *ngIf="statsQry | useQry as result">
-    <vts-chart
-      *ngIf="result.data && result.data.length > 0"
-      [height]="300"
-      [options]="options(result.data)"
-      (chartInit)="onChartInit($event)"
-    />
+  <vts-chart
+    *ngIf="statsQry().data?.length > 0"
+    [height]="300"
+    [options]="options()"
+    (chartInit)="onChartInit($event)"
+  />
 
-    <div
-      *ngIf="result.data && result.data.length === 0"
-      [style.height.px]="300"
-      class="items-center justify-center flex mat-secondary-text tracking-widest text-lg"
-    >
-      NO DATA
-    </div>
-  </ng-container>
+  <div
+    *ngIf="statsQry().data?.length === 0"
+    [style.height.px]="300"
+    class="items-center justify-center flex mat-secondary-text tracking-widest text-lg"
+  >
+    NO DATA
+  </div>
+
+  <div
+    *ngIf="statsQry().isLoading"
+    [style.height.px]="300"
+    class="shimmer rounded animate-pulse"
+  ></div>
 </div>
