--- a/src/app/pages/vtubers-detail/stream-time/stream-time-bar-chart/stream-time-bar-chart.html
+++ b/src/app/pages/vtubers-detail/stream-time/stream-time-bar-chart/stream-time-bar-chart.html
@@ -1,5 +1,5 @@
 <div class="overflow-x-auto">
   <div class="mx-auto" [style.width.px]="width">
-    <vts-chart [height]="156" [options]="options" />
+    <vts-chart [loading]="loading" [height]="156" [options]="options" />
   </div>
 </div>
