--- a/src/app/pages/vtubers-detail/stream-time/stream-time-calendar/stream-time-calendar.html
+++ b/src/app/pages/vtubers-detail/stream-time/stream-time-calendar/stream-time-calendar.html
@@ -10,7 +10,7 @@
 
   <div dir="rtl" class="flex-1 overflow-x-auto">
     <div [style.width.px]="920">
-      <vts-chart [height]="156" [options]="option" />
+      <vts-chart [loading]="loading" [height]="156" [options]="option" />
     </div>
   </div>
 </div>
