--- a/src/app/pages/vtubers-detail/vtuber-streams/vtuber-streams.html
+++ b/src/app/pages/vtubers-detail/vtuber-streams/vtuber-streams.html
@@ -13,14 +13,14 @@
     <vts-refresh-button
       [isLoading]="result.isFetching"
       [refresh]="result.refetch"
-      [updatedAt]="result.data?.pages[0].updatedAt"
+      [updatedAt]="result.data?.pages?.[0]?.updatedAt"
     />
   </div>
 
   <vts-stream-list
     *ngIf="!result.isError"
     [loading]="result.isLoading"
-    [items]="result.data?.pages[0].items"
+    [items]="result.data?.pages?.[0]?.items"
     [hideSpinner]="!result.hasNextPage"
     (reachedEnd)="result.isFetchingNextPage ? null : result.fetchNextPage()"
   >
