--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -12,7 +12,7 @@
         <a
           class="text-inherit"
           target="_blank"
-          href="https://github.com/PoiScript/vtstats"
+          href="https://github.com/vtstats"
           >GitHub</a
         >.
       </p>
