feat: update about page

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -18,6 +18,41 @@
       </p>
 
       <p>
+        If you find this website useful, consider supporting it with a donation
+        by
+      </p>
+
+      <ul>
+        <li>
+          <a
+            class="text-inherit"
+            target="_blank"
+            href="https://www.patreon.com/vtstats/about"
+          >
+            Patreon
+          </a>
+        </li>
+        <li>
+          <a
+            class="text-inherit"
+            target="_blank"
+            href="https://www.buymeacoffee.com/poiscript"
+          >
+            Buy me a coffee
+          </a>
+        </li>
+        <li>
+          <a
+            class="text-inherit"
+            target="_blank"
+            href="https://ko-fi.com/poiscript"
+          >
+            Ko-fi
+          </a>
+        </li>
+      </ul>
+
+      <p>
         Join our discord server at
         <a
           class="text-inherit"
@@ -30,19 +65,12 @@
       <p>
         Credit to
         <a
-          href="https://exchangerate.host/"
-          class="text-inherit"
-          target="_blank"
-          >Exchange Rate Host</a
-        >
-        and
-        <a
           href="https://www.returnyoutubedislike.com/"
           class="text-inherit"
           target="_blank"
           >Return YouTube Dislike</a
         >
-        for providing exchange rate data and youtube like/dislike data.
+        for providing youtube like/dislike data.
       </p>
     </div>
   </div>
