--- a/src/app/components/filter-group/vtuber-filter/vtuber-filter.html
+++ b/src/app/components/filter-group/vtuber-filter/vtuber-filter.html
@@ -2,7 +2,7 @@
   class="!rounded-full"
   mat-stroked-button
   (click)="_isOpen = !_isOpen"
-  [color]="selected.size > 0 && 'primary'"
+  [color]="selected.size > 0 ? 'primary' : null"
   type="button"
   cdkOverlayOrigin
   #trigger="cdkOverlayOrigin"
@@ -12,7 +12,7 @@
   <ng-container *ngIf="selected.size > 0"> +{{selected.size}}</ng-container>
 
   <mat-icon
-    [color]="selected.size > 0 && 'primary'"
+    [color]="selected.size > 0 ? 'primary' : null"
     [class.rotate-180]="_isOpen"
     iconPositionEnd
     svgIcon="menu-down"
